# for display continuity sake please use 2 spaces instead of tabs

2015-12-06 mmichaud <m.michael.michaud@orange.fr>
  * Improved CutFeatureTool
  * add MakeValidPlugIn in Tools>Analysis to repair invalid geometries

2015-12-03 mmichaud <m.michael.michaud@orange.fr>
  * add new plugin EraseLayerAWithLayerB in Tools>Analysis

2015-12-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
   * Added CutFeatures tool into the editing toolbox
   * This tool partially derives from SplitPolygonPlugIn.class from Kosmo SAIG
   * It has been modified to be used both with selected Linestrings and Polygons.
 
2015-12-03 ede
  * added Nicolas Ribot's Oracle Spatial Datastore Extension to CORE
    activates in PLUS as it needs DBQuery's *gt2-oracle-spatial-2.x.jar*
    also *ojdbc6.jar* must be downloaded and installed manually because
    of licensing restrictions
  * extensions can hold messages now (eg. tell why they are not activated)

2015-12-03 mmichaud <m.michael.michaud@orange.fr>
  * fix inconsistency between sld management and new XBasicStyle

2015-11-23 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #411 : plugins in attributeTable context menu was deactivated

2015-11-19 bertazza <bertazza@gmail>
  * Removed reference to IndentingXMLStreamWriter class in SLDHandler class

2015-11-19 bertazza <bertazza@gmail.com>
  * Raster styler: added options to save and load symbology as SLD file, 
  added option to invert ramp for stretched symbology, added given interval
  classification method, added some more default symbologies, fixed some bugs
  * esri Floating Point grid header writer: bug fixed
  * RasterImageLayer: fixed few bugs related to overall and single cell
  transparency

2015-11-13 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Added Measure Toolbox Extension version 11 to OpenJUMP Plus
    Documentation is available here: http://sourceforge.net/projects/opensit
    /files/Openjump/PlugIn/MeasureExtension/Measure%20toolbox_11.pdf/download
  