@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-12-08 ede
+  * bugfix "renaming layers or editing attributes in attribtab executes 
+    plugin/cursortool erronously via shortcut" and "shortcuts Strg+X/C/V etc.
+    not working when editing layer names in TreeLayerNamePanel"
+
 2015-12-06 mmichaud <m.michael.michaud@orange.fr>
   * Improved CutFeatureTool
   * add MakeValidPlugIn in Tools>Analysis to repair invalid geometries
